# VibeProxy

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
apps/macos/: AppIcon.icns  README.md  build.sh  make-icon.sh
apps/macos/Sources/: AnalyticsView.swift  App.swift  AppState.swift  Core.swift  Models.swift  PanelView.swift
crates/vibeproxy-cli/: Cargo.toml
crates/vibeproxy-cli/src/: main.rs
crates/vibeproxy-cli/tests/: cli.rs
crates/vibeproxy-core/: Cargo.toml
crates/vibeproxy-core/src/: autoswitch.rs  lib.rs  onboarding.rs  shell.rs
crates/vibeproxy-core/src/platform/: file_store.rs  macos.rs  mod.rs  stub.rs
crates/vibeproxy-core/src/profile/: mod.rs  paths.rs  store.rs
crates/vibeproxy-core/src/switch/: hotswap.rs  locks.rs  mod.rs
crates/vibeproxy-core/src/usage/: client.rs  mod.rs  model.rs  poll.rs
crates/vibeproxy-core/src/usage_analytics/: export.rs  mod.rs  model.rs  pricing.json  scan.rs
crates/vibeproxy-ffi/: Cargo.toml  generate-swift.sh
crates/vibeproxy-ffi/src/: lib.rs
crates/vibeproxy-ffi/tests/: ffi_e2e.rs
docs/: design-system.md
docs/mockups/: vibeproxy-mock.html
plans/260719-0001-vibeproxy-claude-code-profile-switcher/: phase-00-mechanism-spike.md  phase-01-start.md  phase-02-profile-management-config-swap-switching.md  phase-03-account-login-onboarding-flow.md  phase-04-usage-polling-menubar-display.md  phase-05-auto-switch-engine.md  phase-06-uiux-settings.md  phase-07-packaging-open-source-release.md  plan.md
plans/260719-1323-vibeproxy-usage-analytics/: phase-01-start.md  phase-02-cost-estimation.md  phase-03-analytics-ui-kpis-per-model-per-project.md  phase-04-time-series-charts-and-filters.md  phase-05-polish-export-accessibility.md  plan.md
plans/260721-1155-in-session-account-switching/: phase-01-swap-journal-attribution.md  phase-02-credential-swap.md  phase-03-wire-autoswitch-ui.md  plan.md
plans/260722-0935-core-extraction-cli/: phase-01-workspace-core-crate.md  phase-02-decouple-side-effects.md  phase-03-platform-seams.md  phase-04-cli.md  phase-05-future-tracks.md  plan.md
plans/reports/: brainstorm-260720-2327-hardware-companion-device.md  handoff-260719-1410-vibeproxy-state.md  research-260718-2353-claude-code-auth-storage.md  research-260718-2353-quota-menubar.md  research-260720-2302-quota-display-hardware.md  research-260721-1139-ccs-design-extraction.md  research-260721-1139-claude-swap-in-session.md  spike-260719-mechanism-findings.md  test-260721-1256-e2e-coverage.md  test-260722-1111-cli-qa.md  test-260723-1232-macos-app-e2e.md  verify-260722-1152-full-stack.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autoswitch.rs  keychain.rs  lib.rs  main.rs  shell.rs
src-tauri/src/autoswitch/: mod.rs
src-tauri/src/onboarding/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/profile/: account_meta.rs  mod.rs  paths.rs  store.rs
src-tauri/src/switch/: hotswap.rs  journal.rs  mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/usage/: mod.rs  poller.rs
src-tauri/src/usage_analytics/: cost.rs  mod.rs  model.rs  scan.rs
src/lib/: format.test.ts  format.ts  series-palette.ts
src/lib/chart/: svg.test.ts  svg.ts
src/lib/styles/: tokens.css
src/lib/ui/: Icon.svelte
src/lib/usage/: BarRow.svelte  CacheChart.svelte  ChartTable.svelte  ExportMenu.svelte  Filters.svelte  KpiCard.svelte  MiniBars.svelte  RowBar.svelte  TrendChart.svelte  UsageTable.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/usage/: +page.svelte  +page.ts
