[package]
name = "vibeproxy-cli"
version = "0.2.0"
description = "Headless VibeProxy — switch Claude Code accounts and read usage from any terminal (incl. WSL/SSH)."
authors = ["twelcone"]
edition = "2021"

[[bin]]
name = "vibeproxy"
path = "src/main.rs"

[dependencies]
vibeproxy-core = { path = "../vibeproxy-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
serde_json = "1"
