[package]
name = "vibeproxy-core"
version = "0.2.0"
description = "VibeProxy's Tauri-free core: profiles, credentials, usage analytics, switching."
authors = ["twelcone"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "sync", "rt"] }
